Added feature and page files for Product, Your cart and Your Information pages

--- a/SauceDemoSite/Cucumber_Sauce_demo/config/data/default.yml
+++ b/SauceDemoSite/Cucumber_Sauce_demo/config/data/default.yml
@@ -6,3 +6,8 @@ valid_user_info:
 locked_out_user:
   username: locked_out_user
   password: secret_sauce
+
+your_information:
+  firstname: ~first_name
+  lastname: ~last_name
+  zipcode: 48108  
